include/dss_capi.h

    /*! 
    Name of the active sensor.
    */
    DSS_CAPI_DLL const char* Sensors_Get_Name(void);
    /*! 
    Sets the next Sensor active. Returns 0 if no more.
    */
    DSS_CAPI_DLL int32_t Sensors_Get_Next(void);
    /*! 
    Assumed percent error in the Sensor measurement. Default is 1.
    */
    DSS_CAPI_DLL double Sensors_Get_PctError(void);
    /*! 
    True if voltage measurements are 1-3, 3-2, 2-1.
    */
    DSS_CAPI_DLL uint16_t Sensors_Get_ReverseDelta(void);
    /*! 
    Weighting factor for this Sensor measurement with respect to other Sensors. Default is 1.
    */
    DSS_CAPI_DLL double Sensors_Get_Weight(void);
    DSS_CAPI_DLL void Sensors_Reset(void);
    DSS_CAPI_DLL void Sensors_ResetAll(void);
    DSS_CAPI_DLL void Sensors_Set_Currents(const double* ValuePtr, int32_t ValueCount);
    DSS_CAPI_DLL void Sensors_Set_IsDelta(uint16_t Value);
    DSS_CAPI_DLL void Sensors_Set_kVARS(const double* ValuePtr, int32_t ValueCount);
    DSS_CAPI_DLL void Sensors_Set_kVS(const double* ValuePtr, int32_t ValueCount);
    DSS_CAPI_DLL void Sensors_Set_kWS(const double* ValuePtr, int32_t ValueCount);
    DSS_CAPI_DLL void Sensors_Set_MeteredElement(const char* Value);
    DSS_CAPI_DLL void Sensors_Set_MeteredTerminal(int32_t Value);
    /*! 
    Set the active Sensor by name.
    */
    DSS_CAPI_DLL void Sensors_Set_Name(const char* Value);
    DSS_CAPI_DLL void Sensors_Set_PctError(double Value);
    DSS_CAPI_DLL void Sensors_Set_ReverseDelta(uint16_t Value);
    DSS_CAPI_DLL void Sensors_Set_Weight(double Value);
    /*! 
    Voltage base for the sensor measurements. LL for 2 and 3-phase sensors, LN for 1-phase sensors.
    */
    DSS_CAPI_DLL double Sensors_Get_kVbase(void);
    DSS_CAPI_DLL void Sensors_Set_kVbase(double Value);